# drf-todolist

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
todo/: models.py  serializer.py  urls.py  views.py
todo/migrations/: 0001_initial.py
